--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Formular.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Formular.tex
@@ -21,8 +21,8 @@ celkový (včetně této strany, vyjma titulní):\par
 vlastní text:\par
 přílohy:\par
 vědecký aparát (poznámky, bibliografie aj.):\\\\\\\\
-\textbf{Formát elektronické podoby práce:} .tex, .pdf\\\\
-\textbf{Poznámky} (vyplývající ze specifik jednotlivých oborů):
+\textbf{Formát elektronické podoby práce:} \LaTeX (.tex, .bib, .png, .svg), .pdf\\\\
+%\textbf{Poznámky} (vyplývající ze specifik jednotlivých oborů):
 
 \thispagestyle{empty} 
 \newpage
