--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -34,9 +34,20 @@
   publisher={American Institute of Physics}
 }
  @misc{ratznium_2006,
-    title={File:Oxyhaemoglobin Dissociation curve.png}, url={https://commons.wikimedia.org/wiki/File:Oxyhaemoglobin_dissociation_curve.png},
+    title={File:Oxyhaemoglobin Dissociation curve.png},
+    url={https://commons.wikimedia.org/wiki/File:Oxyhaemoglobin_dissociation_curve.png},
     journal={File:Oxyhaemoglobin dissociation curve.png - Wikimedia Commons},
     publisher={commons.wikimedia.org}, author={Ratznium},
     year={2006},
     note = {[online, citováno 2022-02-07]}
+}
+ @misc{wearables,
+    title={About one-in-five Americans use a smart watch or fitness tracker},
+    url={https://www.pewresearch.org/fact-tank/2020/01/09/about-one-in-five-americans-use-a-smart-watch-or-fitness-tracker/},
+    journal={Pew Research Center},
+    publisher={Pew Research Center},
+    author={Vogels, Emily A.},
+    year={2020},
+    month={Aug},
+    note = {[online, citováno 2022-03-13]}
 } 
