--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Vyuziti.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Vyuziti.tex
@@ -1,4 +1,6 @@
 \section {Využití pulzní oxymetrie}
-\subsection {Nemoci}
-\subsection {Sport}
+Jak již bylo zmíněno v úvodu, přístroje operující na principu pulzní oxymetrie jsou v našem životě již velmi běžné. To, co bylo před 80 lety naprostou technologickou novinkou, která byla používána jen pro vojenské účely, je v současnosti běžnou součástí chytrých náramků a hodinek, které podle jednoho výzkumu \citep{wearables} využíval v roce 2019 více než jeden z pěti Američanů. Ačkoliv nejsou zatím podobná data, jež by měřila změnu v tomto trendu od počátku epidemie Covidu, která prokazatelně zvýšila zájem lidí o vlastní zdraví a životní styl, dá se očekávat, že tato čísla se výrazně zvýšila, a to i u starší generace, jež podle výše zmíněného výzkumu využívala tato zařízení v srovnání s mladší a střední generací o třetinu méně.
+\par Zároveň je však tato metoda ve většině ohledů stále nepřekonaná a využívá se tedy stále velmi běžně ve zdravotnictví - ať už na jednotkách intenzivní péče, na operačních sálech nebo třeba pro novorozence. V poslední době jsou zároveň rozšiřovány možnosti této metody tak, aby dokázala měřit například přítomnost různých škodlivých látek, které by jinak byly vyhodnoceny jako normální okysličená krev.
 \subsection {Běžné využití}
+\subsection {Sport}
+\subsection {Nemoci}
