--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -10,6 +10,16 @@
     doi = {10.1016/B978-0-12-801238-3.10886-4},
     author = {Panayiotis Kyriacou and Karthik Budidha and Tomas Y Abay},
 }
+ @article {matthes,
+    title={Untersuchungen über die Sauerstoffsättigung des Menschlichen arterienblutes},
+    volume={179},
+    DOI={10.1007/bf01862691},
+    number={6},
+    journal={Naunyn-Schmiedebergs Archiv für Experimentelle Pathologie und Pharmakologie},
+    author={Matthes, Karl},
+    year={1935},
+    pages={698–711}
+} 
 @article {TremperPulseOximetry,
 	Title = {Pulse oximetry},
 	Author = {Tremper, KK},
