--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -1,6 +1,7 @@
 \section {Pulzní oxymetrie}
 \subsection {Historie}
-Pulzní oxymetrie je neinvazivní optická technika měření saturace kyslíku v cévách ($SpO_2$). Historie této metody sahá do dob druhé světové války, kdy americký fyziolog Glenn Allen Millikan vyvinul přístroj, který se připevňoval na ušní lalůček a pomocí světla průběžně měřil přibližnou saturaci krve kyslíkem u armádních pilotů při letech ve velkých výškách. {\citep{TremperPulseOximetry}}
+Pulzní oxymetrie je neinvazivní optická technika měření saturace kyslíku v cévách ($SpO_2$). Historie této metody sahá do dob před druhou světovou válkou. Německý lékař a univerzitní profesor Karl Matthes se již od roku 1929, kdy získal doktorát svou prací o zpomalování pulzu morfiem, zabýval oběhovou soustavou. Roku 1935 představil svoji metodu, „\emph{jež umožňuje průběžné zaznamenávání arteriální saturace kyslíkem v lidech způsobem nevyžadujícím krev}". Tuto metodu využíval pro měření plicní kapacity a jako ukazatel metabolického stavu člověka, což však byly v té době již vyřešené problémy. \citep{matthes}
+\par Prací na pulzní oxymetrii se však nejvíce proslavil americký fyziolog Glenn Allen Millikan, který vyvinul přístroj fungující na principech Matthesova přístroje, který se připevňoval na ušní lalůček. Pomocí světla průběžně měřil přibližnou saturaci krve kyslíkem u armádních pilotů při letech ve velkých výškách. \citep{TremperPulseOximetry}
 \par Tento přístroj, který sloužil jako senzor pro kyslíkovou masku sestával z „\emph{miniaturní žárovky, dvou barevných filtrů a dvou fotočlánků se selenovým přechodem, vážil 30 gramů a nasazoval se přes ucho. Jeden z těchto filtrů propouštěl světlo o vlnové délce, která je stejně pohlcována oxy- a redukovaným hemoglobinem, což zajišťovalo měření celkového množství hemoglobinu v cestě od zdroje světla nehledě na jeho saturaci kyslíkem.  Druhá barva byla absorbována těmito dvěma druhy hemoglobinu ve velmi rozdílném množství,}“ díky čemuž se dala dopočítat celková saturace kyslíku v krvi pilota tak, aby kyslíková maska v případě potřeby dodávala správné množství kyslíku. \citep{1942oximeter}
 \par Tato převratná metoda se však rozšířila až v 80. letech minulého století, kdy na sálech a jednotkách intenzivní péče doplnila tehdy používanou analýzu parciálního tlaku kyslíku ($PO_2$). Tato metoda se využívala v kombinaci s fyzickými ukazateli, jako například zbarvení kůže do modra, které však kvůli své subjektivitě nebyly vhodné. Ani samo měření $PO_2$ však nebylo optimální metodou - vztah mezi $PO_2$ a saturací kyslíkem totiž není lineární, což znamená, že nebylo snadné výsledky snadno, rychle a správně interpretovat. Kombinace oxymetrie s měřením parciálního tlaku kyslíku přetrvala do současnosti, kdy se pacientovi v anestezii nebo na jednotce intenzivní péče měří saturace průběžnou pulzní oxymetrií v kombinaci s přerušovaným měřením $PO_2$ pomocí analyzátorů krevních plynů. \citep{KYRIACOU}
 \begin{figure}[H]
