Add sport usage

--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -43,11 +43,40 @@
   doi = {10.1063/1.1769941},
   publisher={American Institute of Physics}
 }
+@article{maxHR,
+    author = {Nes, B. M. and Janszky, I. and Wisløff, U. and Støylen, A. and Karlsen, T.},
+    title = {Age-predicted maximal heart rate in healthy subjects: The HUNT Fitness Study},
+    journal = {Scandinavian Journal of Medicine \& Science in Sports},
+    volume = {23},
+    number = {6},
+    pages = {697-704},
+    doi = {https://doi.org/10.1111/j.1600-0838.2012.01445.x},
+    year = {2013}
+}
+@article{sportuse,
+  title={The use of the SpO2 to FiO2 ratio to individualize the hypoxic dose in sport science, exercise, and health settings},
+  author={Soo, Jacky and Girard, Olivier and Ihsan, Mohammed and Fairchild, Timothy},
+  journal={Frontiers in Physiology},
+  pages={1415},
+  year={2020},
+  publisher={Frontiers}
+}
+@article{fio2,
+  title={Peripheral chemoreceptor responsiveness and hypoxic pulmonary vasoconstriction in humans},
+  author={Albert, Tyler J and Swenson, Erik R},
+  journal={High Altitude Medicine \& Biology},
+  volume={15},
+  number={1},
+  pages={15--20},
+  year={2014},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+}
  @misc{ratznium_2006,
     title={File:Oxyhaemoglobin Dissociation curve.png},
     url={https://commons.wikimedia.org/wiki/File:Oxyhaemoglobin_dissociation_curve.png},
     journal={File:Oxyhaemoglobin dissociation curve.png - Wikimedia Commons},
-    publisher={commons.wikimedia.org}, author={Ratznium},
+    publisher={commons.wikimedia.org},
+    author={Ratznium},
     year={2006},
     note = {[online, citováno 2022-02-07]}
 }
