--- a/Pulzní oxymetrie Truksa, Tvrdík/main.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/main.tex
@@ -13,7 +13,8 @@
 \usepackage{amsmath}
 \usepackage{xcolor}
 \usepackage[normalem]{ulem}
-\bibliographystyle{abbrvnat}
+
+\bibliographystyle{unsrtnat}
 \setcitestyle{authoryear,open={(},close={)}}
 
 
