--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -41,7 +41,7 @@ Text4\\
 %\end{figure}
 
 \subsection {Běžně využívané metody}
-Při využívání pulzní oxymetrie jsou 2 různá uspořádání elektroniky využívané pro měření. Jedná se o transmisní a reflektanční měření, která jsou schematicky znázorněna v \ref{fig:Metody}. Každý z těchto typů měření, jak už jejich názvy napovídají, využívá jiné trajektorie světla skrze prst, což přináší své výhody i nevýhody.
+Při využívání pulzní oxymetrie jsou 2 různá uspořádání elektroniky využívané pro měření. Jedná se o transmisní a reflektanční měření, která jsou schematicky znázorněna v obrázku \ref{fig:Metody}. Každý z těchto typů měření, jak už jejich názvy napovídají, využívá jiné trajektorie světla skrze prst, což přináší své výhody i nevýhody.
 %\begin{figure}[H]
 %  \includegraphics[scale=1, center]{Kapitoly/Teoreticka/Obrazky/Metody.svg}
 %  \caption []{}
