--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -54,7 +54,8 @@
     year = {2013}
 }
 @article{sportuse,
-  title={The use of the SpO2 to FiO2 ratio to individualize the hypoxic dose in sport science, exercise, and health settings},
+  title={The use of the $\text{SpO}_2$ to $\text{FiO}_2$ ratio to individualize the hypoxic dose in sport science, exercise, and health settings},
+  doi = {https://doi.org/10.3389/fphys.2020.570472},
   author={Soo, Jacky and Girard, Olivier and Ihsan, Mohammed and Fairchild, Timothy},
   journal={Frontiers in Physiology},
   pages={1415},
@@ -63,6 +64,7 @@
 }
 @article{fio2,
   title={Peripheral chemoreceptor responsiveness and hypoxic pulmonary vasoconstriction in humans},
+  doi = {https://doi.org/10.1089/ham.2013.1072},
   author={Albert, Tyler J and Swenson, Erik R},
   journal={High Altitude Medicine \& Biology},
   volume={15},
