--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -54,13 +54,33 @@
     year = {2013}
 }
 @article{sportuse,
-  title={The use of the $\text{SpO}_2$ to $\text{FiO}_2$ ratio to individualize the hypoxic dose in sport science, exercise, and health settings},
+  title={The use of the \text{SpO}$_2$ to \text{FiO}$_2$ ratio to individualize the hypoxic dose in sport science, exercise, and health settings},
   doi = {https://doi.org/10.3389/fphys.2020.570472},
   author={Soo, Jacky and Girard, Olivier and Ihsan, Mohammed and Fairchild, Timothy},
   journal={Frontiers in Physiology},
   pages={1415},
   year={2020},
   publisher={Frontiers}
+}
+@article{O2terapie,
+  title={Acute oxygen therapy},
+  author={Bateman, NT and Leach, RM},
+  journal={Bmj},
+  volume={317},
+  number={7161},
+  pages={798--801},
+  year={1998},
+  publisher={British Medical Journal Publishing Group},
+  doi = {https://doi.org/10.1136/bmj.317.7161.798}
+}
+@incollection{monitoring,
+  title={Patient monitoring systems},
+  author={Gardner, Reed M and Clemmer, Terry P and Evans, R Scott and Mark, Roger G},
+  booktitle={Biomedical Informatics},
+  pages={561--591},
+  year={2014},
+  publisher={Springer},
+  doi = {https://doi.org/10.1007/978-1-4471-4474-8\_19}
 }
 @article{fio2,
   title={Peripheral chemoreceptor responsiveness and hypoxic pulmonary vasoconstriction in humans},
