Add equation descriptions, measuring methods image

--- a/Pulzní oxymetrie Truksa, Tvrdík/main.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/main.tex
@@ -20,7 +20,7 @@
 
 \newcommand\tema{Pulzní Oxymetrie}
 \newcommand\obor{Informatika}
-\newcommand\hlavicka{\noindent\includegraphics[width=0.993\textwidth]{Formality/Hlavicka.png}\\\\} %ošklivý hard-codnutý číslo, ale sedí to
+\newcommand\hlavicka{\noindent\includegraphics[width=0.993\textwidth]{Formality/Hlavicka.png}\\\\}
 \newcommand*{\doi}[1]{\href{https://doi.org/#1}{doi: #1}} %https://tex.stackexchange.com/questions/3802/how-to-get-doi-links-in-bibliography
 \hbadness=10000
 
