--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -14,30 +14,30 @@ Pulzní oxymetrie je neinvazivní optická technika měření saturace kyslíku 
 Srdce člověka, jak je obecně známo, funguje v cyklech. Pro krev v tepnách to znamená, že ve chvíli, kdy srdce vypuzuje krev, se zvýší její objem díky elasticitě tepen. Zvýšení tohoto objemu logicky vede k nižší propustnosti světla, díky čemuž mají pulzní oxymetry schopnost měřit srdeční tep.
 \par Saturace kyslíku je pak udávána vztahem $SpO_2 = \frac{HbO_2}{\text{Hemoglobin celkem}}$, kde $HbO_2$ je oxyhemoglobin. Tento vztah se pro běžné měření oxymetrem, který umí rozlišovat jen mezi dvěma základními formami hemoglobinu, zjednodušuje na $SpO_2 = \frac{HbO_2}{HbO_2+Hb}$, kde $Hb$ je deoxyhemoglobin). Nové pokročilejší přístroje jsou však schopny detekovat i další formy hemoglobinu - karboxyhemoglobin a methemoglobin. Rovnice pro takovéto měření je pak $SpO_2 = \frac{HbO_2}{HbO_2+Hb+HbCO+HbMet}$, kde $HbCO$ je karboxyhemoglobin a $HbMet$ je methemoglobin. 
 \subsubsection{Aplikace Lambertova-Beerova zákona} Samotné měření saturace kyslíku v krvi pak probíhá na principu Lambertova-Beerova zákona, který popisuje pohlcováni elektromagnetické záření. Aplikace tohoto zákona je popsána v následujících rovnicích, které popisuje \cite{KYRIACOU}.
-\begin{equation}%když budeš chtít víc rovnic u sebe alignnout, tak je to align místo equation a před alignnutý = dáš &
+\begin{equation}
   {\epsilon_{\lambda}cl} = A_{\lambda} = ln(T) = ln(\frac{I_s}{I_d})
   \label{EQ:Lambertův–Beerův zákon}
 \end{equation}\\
-Zákon říká, že když vynásobíme molární absorpci při dané vlnové délce ($\epsilon_{\lambda}$), koncentraci absorpční složky ($c$) a dráhu kterou musí světlo přes danou látku vzít ($l$), tak nám vyjde absorbance pro světlo dané vlnové délky ($A_{\lambda}$). Pokud absorbanci zlogaritmujeme, tak získáme transmitanci ($T$). Transmitanci také můžeme vyjádřit jako poměr mezi intenzitou světla které látkou projde při diastole a intenzitou světla které látkou projde při systole ($\frac{I_s}{I_d}$). Tím nám vzniká vztah z rovnice \ref{EQ:Lambertův–Beerův zákon}.\\
+Lambertův–Beerův zákon říká, že vynásobením molární absorpce při vlnové délce $\lambda$ ($\epsilon_{\lambda}$), koncentrace absorpční složky ($c$) a dráhy kterou musí světlo přes danou látku urazit ($l$), vyjde bezrozměrná veličina udávající jak daná látka pohlcuje světlo dané vlnové délky. Tato veličina se nazývá absorbance ($A_{\lambda}$). Její logaritmus udává naopak propustnost světla a nazýváme jej transmitance ($T$). Transmitanci také můžeme vyjádřit jako poměr mezi intenzitou světla které látkou projde při diastole a intenzitou světla které látkou projde při systole ($\frac{I_s}{I_d}$).\\
 \begin{equation}
     A_{\lambda} = ln(\frac{I_d+AC_{\lambda}}{I_d})
     \label{EQ:ZAKLAD}
 \end{equation}\\
-Vzhledem k tomu, že jediná často se měnící vlastnost námi sledované látky, v tomto případě prstu, je kolik a jaké krve v ní zrovna je, tak můžeme rozdíl mezi již zmíněnými intenzitami světla při různých stavech oběhového systému označit jako celou střídavou složku ($AC_{\lambda}$). To znamená že, při dané vlnové délce: $AC_{\lambda} = I_d - I_s$. Díky tomu můžeme dospět k rovnici \ref{EQ:ZAKLAD}.\\
+Vzhledem k tomu, že jediné proměnlivé vlastnosti námi sledované látky, v tomto případě prstu, je množství a okysličenost krve, můžeme rozdíl mezi již zmíněnými intenzitami světla při různých stavech oběhového systému označit jako celou střídavou složku ($AC_{\lambda}$). To znamená že, při dané vlnové délce platí vztah $AC_{\lambda} = I_s - I_d$. Využitím tohoto vztahu vznikne rovnice \ref{EQ:ZAKLAD}.\\
 \begin{equation}
     A_{\lambda} = ln(\frac{I_d+AC_{\lambda}}{I_d}) = ln(1+\frac{AC_{\lambda}}{I_d}) \simeq \frac{AC_{\lambda}}{I_d}
 \end{equation}\\
-Text3\\
+Jednoduchou úpravou zlomku z rovnice \ref{EQ:ZAKLAD} získáváme logaritmus ve tvaru $ln(1+x)$. Takový logaritmus lze pro hodnoty $x$ blížící se nule zjednodušit jako $ln(1+x)\simeq x$.Vzhledem k tomu, že samotná střídavá složka ($AC_{\lambda}$) je většinou jen 1 - 2 \% celkové intenzity světla a je tedy v porovnání s $I_d$ zanedbatelně malá, můžeme tuto úpravu provést se bez ztráty na přesnosti.\\
 \begin{equation}
     A_{\lambda} = \frac{AC_{\lambda}}{I_d} = \frac{AC_{\lambda}}{DC_{\lambda}}
     \label{EQ:DC}
 \end{equation}\\
-Dalším důležitým faktem je, že samotná střídavá složka ($AC_{\lambda}$) je většinou jen 1 \%-2 \% celkové intenzity světla. Díky tomu můžeme rozdíl mezi průměrnou intenzitou světla, co prstem prošlo (stálá složka - $DC_{\lambda}$) a již zmíněnými intenzitami světla při různých stavech oběhového systému ($I_s$ a $I_d$) označit za zanedbatelný. Toho také využijeme v rovnici \ref{EQ:DC}.\\
+Jak již bylo řečeno, $AC_{\lambda}$ nabývá při měření velmi malých hodnot, díky čemuž můžeme rozdíl mezi průměrnou intenzitou světla, jež prošlo prstem (stálá složka - $DC_{\lambda}$) a již zmíněnými intenzitami světla při různých stavech oběhového systému ($I_s$ a $I_d$) označit za zanedbatelný. Toho také využijeme v rovnici \ref{EQ:DC}.\\
 \begin{equation}
-    R = \frac{A_{\lambda1}}{A_{\lambda2}} = \frac{\frac{(AC_{\lambda1}}{DC_{\lambda1}})}{(\frac{AC_{\lambda2}}{DC_{\lambda2}})}
+    R = \frac{A_{\lambda1}}{A_{\lambda2}} = \frac{(\frac{AC_{\lambda1}}{DC_{\lambda1}})}{(\frac{AC_{\lambda2}}{DC_{\lambda2}})}
     \label{EQ:poměr absorbancí}
 \end{equation}\\
-Poměr absorbancí při dvou vhodných vlnových délkách (jak ukazuje rovnice \ref{EQ:poměr absorbancí}) a empiricky získaná kalibrační křivka se používají pro vypočítání saturace kyslíku v krvi ($SpO_2$).\\
+Poměr absorbancí ($R$) při dvou vhodných vlnových délkách (jak ukazuje rovnice \ref{EQ:poměr absorbancí}) a empiricky získaná kalibrační křivka se používají pro vypočítání $SpO_2$.\\
 
 \subsubsection{Volba vlnových délek}
  
@@ -49,10 +49,11 @@ Poměr absorbancí při dvou vhodných vlnových délkách (jak ukazuje rovnice 
 
 \subsection {Běžně využívané metody}
 Při využívání pulzní oxymetrie jsou 2 různá uspořádání elektroniky využívané pro měření. Jedná se o transmisní a reflektanční měření, která jsou schematicky znázorněna v obrázku \ref{fig:Metody}. Každý z těchto typů měření, jak už jejich názvy napovídají, využívá jiné trajektorie světla skrze prst, což přináší své výhody i nevýhody.
-%\begin{figure}[H]
-%  \includegraphics[scale=1, center]{Kapitoly/Teoreticka/Obrazky/Metody.svg}
-%  \caption []{}
-%  \label{fig:Metody}
-%\end{figure}
+\begin{figure}[H]
+    \caption []{}
+    \def\svgwidth{\columnwidth}
+    \input{Kapitoly/Teoreticka/Obrazky/Metody.pdf_tex}
+    \label{fig:Metody}
+\end{figure}
 \par \textbf{Transmisní metoda} měření spočívá v měření světla, které projde skrz tkáň, což v praxi znamená, že se na kůži z jedné strany svítí oběma diodami a fotodioda se nachází naproti nim. Hlavní výhodou tohoto způsobu měření je vysoká přesnost výsledného měření, které je dosaženo převážně díky přímé trajektorii světla, kdy nezáleží na jeho odrazu od prstu. Naopak hlavní nevýhodou této metody je relativně omezené množství materiálu mezi diodami a fotodiodou, protože při větším množství tkáně v trase světla by již nedocházelo k dostatečnému přenosu světla pro přesné určení saturace. Tato metoda se tedy využívá při měření přes prst, případně ušní lalůček. % Nakreslit obrázek
 \par \textbf{Reflektanční metoda} měření naopak využívá světla odraženého tkáněmi pod kůží. To v praxi znamená, že se všechny 3 komponenty (obě LED a fotodioda) nachází na jedné straně ruky (případně jiné části těla), a to tak, že fotodioda se nachází mezi oběma LED, aby se vlivem nerovné vzdálenosti nezkreslovala intenzita záření. Výhodou tohoto měření je, že oxymetr využívající tohoto principu je výrazně přenosnější a pohodlnější pro uživatele, vzhledem k tomu, že ho stačí pouze přiložit. Z tohoto důvodu se využívá ve fitness náramcích a hodinkách, kde by nebylo praktické mít dvě pevné části naproti sobě. Nevýhodou je však nižší přesnost měření, která je převážně důsledkem vysokého rozptylu odraženého světla.
