Clarify by changing word order

--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -18,7 +18,7 @@ Srdce člověka, jak je obecně známo, funguje v cyklech. Pro krev v tepnách t
   {\epsilon_{\lambda}cl} = A_{\lambda} = ln(T) = ln(\frac{I_s}{I_d})
   \label{EQ:Lambertův–Beerův zákon}
 \end{equation}\\
-Lambertův–Beerův zákon říká, že vynásobením molární absorpce při vlnové délce $\lambda$ ($\epsilon_{\lambda}$), koncentrace absorpční složky ($c$) a dráhy kterou musí světlo přes danou látku urazit ($l$), vyjde bezrozměrná veličina udávající jak daná látka pohlcuje světlo dané vlnové délky. Tato veličina se nazývá absorbance ($A_{\lambda}$). Její logaritmus udává naopak propustnost světla a nazýváme jej transmitance ($T$). Transmitanci také můžeme vyjádřit jako poměr mezi intenzitou světla které látkou projde při diastole a intenzitou světla které látkou projde při systole ($\frac{I_s}{I_d}$).\\
+Lambertův–Beerův zákon říká, že vynásobením molární absorpce při vlnové délce $\lambda$ ($\epsilon_{\lambda}$), koncentrace absorpční složky ($c$) a dráhy kterou musí světlo přes danou látku urazit ($l$), vyjde bezrozměrná veličina udávající jak daná látka pohlcuje světlo dané vlnové délky. Tato veličina se nazývá absorbance ($A_{\lambda}$). Její logaritmus udává naopak propustnost světla a nazýváme jej transmitance ($T$). Transmitanci také můžeme vyjádřit jako poměr mezi intenzitou světla které látkou projde při systole a intenzitou světla které látkou projde při diastole ($\frac{I_s}{I_d}$).\\
 \begin{equation}
     A_{\lambda} = ln(\frac{I_d+AC_{\lambda}}{I_d})
     \label{EQ:ZAKLAD}
