--- a/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Formality/Bibliografie.bib
@@ -111,4 +111,12 @@
     year={2020},
     month={Aug},
     note = {[online, citováno 2022-03-13]}
-} 
+}
+ @book{tep,
+    place={Praha},
+    title={Trénink pod kontrolou: metody, kontrola a vyhodnocení vlastního tréninku},
+    publisher={Grada Publ},
+    author={Neumann, Georg and Pfützner Arndt and Hottenrott, Kuno},
+    year={2007},
+    isbn={9788024709475}
+}
