--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -41,19 +41,19 @@ Poměr absorbancí ($R$) při dvou vhodných vlnových délkách (jak ukazuje ro
 
 \subsubsection{Volba vlnových délek}
  
-%\begin{figure}[H]
-%  \includegraphics[scale=1, center]{Kapitoly/Teoreticka/Obrazky/Absorpce.png}
-%  \caption [Absorpční spektrum HHb a Hb$O_2$]{Absorpční spektrum HHb a Hb$O_2$, na přibližně 805 nanometrech je absorpce stejná, na nižších vlnových délkách absorpci způsobuje převážně HHb, na vyšších pak Hb$O_2$. \citep{KYRIACOU}, upraveno}
-%  \label{fig:Absorpce}
-%\end{figure}
+\begin{figure}[H]
+  \includegraphics[scale=1, center]{Kapitoly/Teoreticka/Obrazky/Absorpce.png}
+  \caption [Absorpční spektrum Hb a Hb$O_2$]{Na přibližně 805 nanometrech je, jak lze vidět z absorpčního spektra, absorpce deoxy- a oxy- hemoglobinu stejná, na nižších vlnových délkách absorpci způsobuje převážně deoxyhemoglobin, na vyšších pak oxyhemoglobin. \citep{KYRIACOU}, upraveno}
+  \label{fig:Absorpce}
+\end{figure}
 
 \subsection {Běžně využívané metody}
 Při využívání pulzní oxymetrie jsou 2 různá uspořádání elektroniky využívané pro měření. Jedná se o transmisní a reflektanční měření, která jsou schematicky znázorněna v obrázku \ref{fig:Metody}. Každý z těchto typů měření, jak už jejich názvy napovídají, využívá jiné trajektorie světla skrze prst, což přináší své výhody i nevýhody.
 \begin{figure}[H]
-    \caption []{}
     \def\svgwidth{\columnwidth}
     \input{Kapitoly/Teoreticka/Obrazky/Metody.pdf_tex}
+    \caption [Transmisní a reflektanční metoda]{Při pulzní oxymetrii lze využít elektroniku ve dvou uspořádáních, které určují metodu měření. Při transmisní metodě (1) jsou dva světelné zdroje naproti fotodiodě, kdežto při reflektanční metodě (2) se nachází fotodioda na stejné straně přístroje mezi zdroji světla.}
     \label{fig:Metody}
 \end{figure}
-\par \textbf{Transmisní metoda} měření spočívá v měření světla, které projde skrz tkáň, což v praxi znamená, že se na kůži z jedné strany svítí oběma diodami a fotodioda se nachází naproti nim. Hlavní výhodou tohoto způsobu měření je vysoká přesnost výsledného měření, které je dosaženo převážně díky přímé trajektorii světla, kdy nezáleží na jeho odrazu od prstu. Naopak hlavní nevýhodou této metody je relativně omezené množství materiálu mezi diodami a fotodiodou, protože při větším množství tkáně v trase světla by již nedocházelo k dostatečnému přenosu světla pro přesné určení saturace. Tato metoda se tedy využívá při měření přes prst, případně ušní lalůček. % Nakreslit obrázek
-\par \textbf{Reflektanční metoda} měření naopak využívá světla odraženého tkáněmi pod kůží. To v praxi znamená, že se všechny 3 komponenty (obě LED a fotodioda) nachází na jedné straně ruky (případně jiné části těla), a to tak, že fotodioda se nachází mezi oběma LED, aby se vlivem nerovné vzdálenosti nezkreslovala intenzita záření. Výhodou tohoto měření je, že oxymetr využívající tohoto principu je výrazně přenosnější a pohodlnější pro uživatele, vzhledem k tomu, že ho stačí pouze přiložit. Z tohoto důvodu se využívá ve fitness náramcích a hodinkách, kde by nebylo praktické mít dvě pevné části naproti sobě. Nevýhodou je však nižší přesnost měření, která je převážně důsledkem vysokého rozptylu odraženého světla.
+\par \textbf{Transmisní metoda} (obrázek \ref{fig:Metody}, (1)) měření spočívá v měření světla, které projde skrz tkáň, což v praxi znamená, že se na kůži z jedné strany svítí oběma diodami a fotodioda se nachází naproti nim. Hlavní výhodou tohoto způsobu měření je vysoká přesnost výsledného měření, které je dosaženo převážně díky přímé trajektorii světla, kdy nezáleží na jeho odrazu od prstu. Naopak hlavní nevýhodou této metody je relativně omezené množství materiálu mezi diodami a fotodiodou, protože při větším množství tkáně v trase světla by již nedocházelo k dostatečnému přenosu světla pro přesné určení saturace. Tato metoda se tedy využívá při měření přes prst, případně ušní lalůček.
+\par \textbf{Reflektanční metoda} (obrázek \ref{fig:Metody}, (2)) měření naopak využívá světla odraženého tkáněmi pod kůží. To v praxi znamená, že se všechny 3 komponenty (obě LED a fotodioda) nachází na jedné straně ruky (případně jiné části těla), a to tak, že fotodioda se nachází mezi oběma LED, aby se vlivem nerovné vzdálenosti nezkreslovala intenzita záření. Výhodou tohoto měření je, že oxymetr využívající tohoto principu je výrazně přenosnější a pohodlnější pro uživatele, vzhledem k tomu, že ho stačí pouze přiložit. Z tohoto důvodu se využívá ve fitness náramcích a hodinkách, kde by nebylo praktické mít dvě pevné části naproti sobě. Nevýhodou je však nižší přesnost měření, která je převážně důsledkem vysokého rozptylu odraženého světla.
