--- a/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
+++ b/Pulzní oxymetrie Truksa, Tvrdík/Kapitoly/Teoreticka/Oxymetrie.tex
@@ -12,7 +12,8 @@ Pulzní oxymetrie je neinvazivní optická technika měření saturace kyslíku 
 \par Pulzní oxymetrie však v současnosti není již specializovanou metodou pro vojenské či zdravotnické účely, ale je používána i v zařízeních určených běžným uživatelům, a to nejen samostatně, ale i jakožto součást komplexnějších produktů. Oproti původnímu Millikanovu oxymetru navíc používáme přesnějších zdrojů světla, LED světlech o specifických vlnových délkách. Zároveň se dá měřit i na jiných částech těla, než je ucho - běžně dostupné oxymetry nejčastěji měří na prstu, existují však i varianty měřící na zápěstí.
 \subsection {Princip fungování}
 Srdce člověka, jak je obecně známo, funguje v cyklech. Pro krev v tepnách to znamená, že ve chvíli, kdy srdce vypuzuje krev, se zvýší její objem díky elasticitě tepen. Zvýšení tohoto objemu logicky vede k nižší propustnosti světla, díky čemuž mají pulzní oxymetry schopnost měřit srdeční tep.
-\par Saturace kyslíku je pak udávána vztahem $SpO_2 = \frac{HbO_2}{\text{Hemoglobin celkem}}$, kde $HbO_2$ je oxyhemoglobin. Tento vztah se pro běžné měření oxymetrem, který umí rozlišovat jen mezi dvěma základními formami hemoglobinu, zjednodušuje na $SpO_2 = \frac{HbO_2}{HbO_2+Hb}$, kde $Hb$ je deoxyhemoglobin). Nové pokročilejší přístroje jsou však schopny detekovat i další formy hemoglobinu - karboxyhemoglobin a methemoglobin. Rovnice pro takovéto měření je pak $SpO_2 = \frac{HbO_2}{HbO_2+Hb+HbCO+HbMet}$, kde $HbCO$ je karboxyhemoglobin a $HbMet$ je methemoglobin. 
+\par Transportní protein hemoglobin, který má v těle funkci přenosu některých plynů, se vyskytuje v erytrocytech většiny obratlovců. Pro plnění své funkce je schopen na sebe tyto plyny navázat a následně je vypustit. Při navázání různých plynů se mění jeho vlastnosti, čehož lze využít pro rozpoznání jednotlivých plynů, jež jsou na něj navázány.
+\par Saturace kyslíku v krvi je pak udávána vztahem $SpO_2 = \frac{HbO_2}{\text{Hemoglobin celkem}}$, kde $HbO_2$ je oxyhemoglobin (hemoglobin s navázaným kyslíkem). Tento vztah se pro běžné měření oxymetrem, který umí rozlišovat jen mezi dvěma základními formami hemoglobinu, zjednodušuje na $SpO_2 = \frac{HbO_2}{HbO_2+Hb}$, kde $Hb$ je deoxyhemoglobin (hemoglobin bez navázaného kyslíku). Nové pokročilejší přístroje jsou však schopny detekovat i další formy hemoglobinu - karboxyhemoglobin a methemoglobin. Rovnice pro takovéto měření je pak $SpO_2 = \frac{HbO_2}{HbO_2+Hb+HbCO+HbMet}$, kde $HbCO$ je karboxyhemoglobin (hemoglobin s navázaným oxidem uhelnatým) a $HbMet$ je methemoglobin (hemoglobin, jehož železnatá ($Fe^{2+}$) část hemu (složka hemoglobinu) byla změněna na železitou ($Fe^{3+}$)). 
 \subsubsection{Aplikace Lambertova-Beerova zákona} Samotné měření saturace kyslíku v krvi pak probíhá na principu Lambertova-Beerova zákona, který popisuje pohlcováni elektromagnetické záření. Aplikace tohoto zákona je popsána v následujících rovnicích, které popisuje \cite{KYRIACOU}.
 \begin{equation}
   {\epsilon_{\lambda}cl} = A_{\lambda} = ln(T) = ln(\frac{I_s}{I_d})
@@ -41,7 +42,7 @@ Poměr absorbancí ($R$) při dvou vhodných vlnových délkách (jak ukazuje ro
 
 \subsubsection{Volba vlnových délek}
  
-\begin{figure}[H]
+\begin{figure}[ht]
   \includegraphics[scale=1, center]{Kapitoly/Teoreticka/Obrazky/Absorpce.png}
   \caption [Absorpční spektrum Hb a Hb$O_2$]{Na přibližně 805 nanometrech je, jak lze vidět z absorpčního spektra, absorpce deoxy- a oxy- hemoglobinu stejná, na nižších vlnových délkách absorpci způsobuje převážně deoxyhemoglobin, na vyšších pak oxyhemoglobin. \citep{KYRIACOU}, upraveno}
   \label{fig:Absorpce}
